<refactor>(physics): Engine and character rendering refactoring